syntax = "proto3";
package VirtualPaper.Grpc.Service.Account;
import "google/protobuf/empty.proto";
import "Protos/models.proto";

service Grpc_AccountService {
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc IsLogin (google.protobuf.Empty) returns (IsLoginResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (google.protobuf.Empty) returns (LogoutResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
    rpc SendEmailCode (SendEmailCodeRequest) returns (SendEmailCodeResponse);
    rpc UpdateUserInfo (UpdateUserInfoRequest) returns (UpdateUserInfoResponse);
    rpc GetPersonalCloudLib (google.protobuf.Empty) returns (PersonalCloudLibResponse);
    rpc GetPartitions (google.protobuf.Empty) returns (PartitionsResponse);
    rpc UploadWallpaper (UplaodWallpaperRequest) returns (UploadWallpaperResponse);
}

message UplaodWallpaperRequest {
    VirtualPaper.Grpc.Service.Models.Grpc_WpBasicData wp_basic_data = 1;
}

message UploadWallpaperResponse {
    bool success = 1;
    string message = 2;
}

message PartitionsResponse {
    bool success = 1;
    string message = 2;
    repeated string partitions = 3;
}

message PersonalCloudLibResponse {
    bool success = 1;
    string message = 2;
    repeated VirtualPaper.Grpc.Service.Models.Grpc_WpBasicData wallpapers = 3;
}

message UpdateUserInfoRequest{
    Grpc_UserInfo user = 1;
}

message UpdateUserInfoResponse {
  bool success = 1;
  Grpc_UserInfo user = 2;
  string message = 3;
}

message Grpc_UserInfo {
  string uid = 1;
  bytes avatar = 2;
  string name = 3;
  string email = 4;
  string sign = 5;
  Grpc_UserStatus status = 6;
}

enum Grpc_UserStatus {
  Normal = 0;
  Locked = 1;
  Deleted = 2;
}

message ChangePasswordRequest {
    string old_password = 1;
    string new_password = 2;
}

message ChangePasswordResponse {
    bool success = 1;
    string message = 2; // 错误信息或成功提示
}

message IsLoginResponse {
    bool is_login = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2; // 错误信息或成功提示
    Grpc_UserInfo user = 3;
}

message LogoutResponse {
    bool success = 1;
    string message = 2; // 错误信息或成功提示
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string security_code = 3;
    string password = 4;
    string confirm_password = 5;
}

message RegisterResponse {
    bool success = 1;
    string message = 2; // 错误信息或成功提示
    Grpc_UserInfo user = 3;
}

message ResetPasswordRequest {
    string email = 1;
    string code = 2;
    string new_password = 3;
}

message ResetPasswordResponse {
    bool success = 1;
    string message = 2; // 错误信息或成功提示
}

message SendEmailCodeRequest {
    string email = 1;
}

message SendEmailCodeResponse {
    bool success = 1;
    string message = 2; // 错误信息或成功提示
}
